--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,21 +10,23 @@ lilás: #5f2c82*/
     padding: 0px;
     box-sizing: border-box;
 }
+
 body,html{
     background-color:#5f2c82;
     height: 100vh;
     width: 100vw;
 }
+
 main{
     position: relative;
     height: 100vh;
     width: 100vw;
 }
+
 section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
@@ -32,23 +34,90 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+     transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
+
 section#login > div#imagem{
     background: #5f2c82 url(../imagens/pexels-pixabay-248921\ \(1\).jpg) no-repeat;
     background-size:cover;
     height: 200px;
     display: block;
 }
+
 section#login > div#formulario{
     display: block;
     padding: 10px;
 }
+
 div#formulario h1{
     text-align: center;
     margin-bottom: 10px;
 }
+
 div#formulario p{
     font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form label{
+    display: none;
+}
+
+div.campo > input{
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 29px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+   transform: translateX(1px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+    border: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #254e4d;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:white;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+    color: #254e4d;
+    margin-top: 5px;
+}
+
+form > a.botao:hover{
+    background-color:#63dad6;
 }
